[gd_scene load_steps=15 format=2]

[ext_resource path="res://ObstacleBase.tscn" type="PackedScene" id=1]
[ext_resource path="res://clipart1504290.png" type="Texture" id=2]
[ext_resource path="res://ObstacleTurtle.gd" type="Script" id=3]

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 374, 82, 73, 67 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 456, 82, 47, 67 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 517, 82, 37, 67 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 2 )
region = Rect2( 564, 82, 33, 67 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 2 )
region = Rect2( 495, 368, 99, 92 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 2 )
region = Rect2( 7, 82, 73, 67 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 2 )
region = Rect2( 80, 82, 73, 67 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 2 )
region = Rect2( 153, 82, 73, 67 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 2 )
region = Rect2( 226, 82, 73, 67 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 2 )
region = Rect2( 301, 82, 73, 67 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 16 ) ],
"loop": false,
"name": "submerge",
"speed": 5.0
}, {
"frames": [ SubResource( 10 ), SubResource( 9 ), SubResource( 8 ), SubResource( 7 ) ],
"loop": false,
"name": "surface",
"speed": 5.0
}, {
"frames": [ SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ) ],
"loop": true,
"name": "swim",
"speed": 5.0
} ]

[node name="ObstacleBase" instance=ExtResource( 1 )]
script = ExtResource( 3 )

[node name="AnimatedSprite" parent="." index="1"]
scale = Vector2( 1.35, 1.35 )
frames = SubResource( 6 )
animation = "swim"
playing = true

[node name="Timer" type="Timer" parent="." index="3"]
wait_time = 3.0

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
